Show if proxy is active in Status-window

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -182,7 +182,7 @@
                 <div class="field-pair advanced-settings">
                     <label class="config" for="socks5_proxy_url">$T('opt-socks5_proxy_url')</label>
                     <input type="text" name="socks5_proxy_url" id="socks5_proxy_url" value="$socks5_proxy_url" />
-                    <span class="desc">$T('explain-socks5_proxy_url') $T('readwiki')</span>
+                    <span class="desc">$T('explain-socks5_proxy_url') <br/>$T('readwiki')</span>
                 </div>
                 <div class="field-pair">
                     <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
