Add placeholder for SOCKS5 Proxy input

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -181,7 +181,7 @@
                 </div>
                 <div class="field-pair advanced-settings">
                     <label class="config" for="socks5_proxy_url">$T('opt-socks5_proxy_url')</label>
-                    <input type="text" name="socks5_proxy_url" id="socks5_proxy_url" value="$socks5_proxy_url" />
+                    <input type="text" name="socks5_proxy_url" id="socks5_proxy_url" value="$socks5_proxy_url" placeholder="socks5://username:password@hostname:port" />
                     <span class="desc">$T('explain-socks5_proxy_url') <br/>$T('readwiki')</span>
                 </div>
                 <div class="field-pair">
