Refactoring, change some names and move some code to sabnzbd.config

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -241,7 +241,7 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="upload_backup">$T('restore-backup')</label>
-                    <input type="file" name="admin_backup" id="admin_backup" />
+                    <input type="file" name="backup_config_file" id="admin_backup" />
                     <span class="desc">$T('explain-admin_backup')</span>
                 </div>
                 <div class="field-pair">
