--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -240,8 +240,8 @@
                         <span class="desc"><a class="btn btn-default" href="$caller_url/backup/?apikey=$apikey" target="_blank" id="download_backup"><span class="glyphicon glyphicon-import"></span> $T('download-backup')</a></span>
                     </div>
                     <div class="field-pair">
-                        <label class="config" for="backup_config_file">$T('restore-backup')</label>
-                        <input type="file" name="backup_config_file" id="backup_config_file" />
+                        <label class="config" for="config_backup_file">$T('restore-backup')</label>
+                        <input type="file" name="config_backup_file" id="config_backup_file" />
                         <span class="desc">$T('explain-admin_backup')</span>
                     </div>
                     <div class="field-pair">
