Small changes and rebase on develop

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -237,7 +237,7 @@
                 <fieldset>
                     <div class="field-pair">
                         <label class="config" for="download_backup">$T('download-backup')</label>
-                        <span class="desc"><a class="btn btn-default" href="$caller_url/backup/?apikey=$apikey" target="_blank" id="download_backup"><span class="glyphicon glyphicon-import"></span> $T('download-backup')</a></span>
+                        <span class="desc"><a class="btn btn-default" href="../backup/?apikey=$apikey" target="_blank" id="download_backup"><span class="glyphicon glyphicon-download-alt"></span> $T('download-backup')</a></span>
                     </div>
                     <div class="field-pair">
                         <label class="config" for="config_backup_file">$T('restore-backup')</label>
