--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -439,6 +439,14 @@
                                     <input type="checkbox" name="confirmDeleteHistory" value="true" data-bind="checked: confirmDeleteHistory" />
                                 </div>
                             </div>
+                            <div class="form-group form-checkbox">
+                                <label class="col-sm-6 control-label">
+                                    $T("Glitter-keyboardShortcuts")
+                                </label>
+                                <div class="col-sm-4">
+                                    <input type="checkbox" name="keyboardShortcuts" value="true" data-bind="checked: keyboardShortcuts" />
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
