Rename DARWIN constant to MACOS

--- a/interfaces/Config/templates/_inc_footer_uc.tmpl
+++ b/interfaces/Config/templates/_inc_footer_uc.tmpl
@@ -12,7 +12,7 @@
                     <div class="modal-body">
                     </div>
                     <div class="modal-footer">
-                        <!--#if not $nt#-->
+                        <!--#if not $windows#-->
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox" id="show_hidden_folders"> <span>$T('systemFolders')</span>
