--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -41,7 +41,7 @@
                     </td>
                 </tr>
                 <!--#end if#-->
-                <!--#if not $nt and not $darwin#-->
+                <!--#if not $windows and not $macos#-->
                 <tr>
                     <th scope="row">$T('opt-multicore-par2')</th>
                     <td>
