--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -124,7 +124,7 @@
        </div>
     </div>
     <!--#end if#-->
-    <!--#if $nt#-->
+    <!--#if $windows#-->
     <div class="section">
         <div class="col2">
             <h3>$T('section-AC')</h3>
