Add shortcuts to the config

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -35,6 +35,9 @@
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/chartist.min.css" />
     <link rel="stylesheet" type="text/css" href="${root}staticcfg/css/style.css?v=$version" />
 
+    <script type="text/javascript" src="${root}staticcfg/js/knockout-3.5.1.min.js"></script>
+    <script type="text/javascript" src="${root}staticcfg/js/config.main.js"></script>
+
     <link rel="shortcut icon" href="${root}staticcfg/ico/favicon.ico?v=$version" />
 
     <script type="text/javascript">
@@ -187,7 +190,7 @@
                     </a>
                 </li>
                 <li class="dropdown" id="search-menu">
-                    <a data-toggle="dropdown" href="#">
+                    <a class="search-dropdown" data-toggle="dropdown" href="#">
                         <span class="glyphicon glyphicon-search"></span>
                         <strong><span class="glyphicon glyphicon-search"></span></strong>
                     </a>
