Allow longer timeouts for status update
Closes #2066

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -182,7 +182,7 @@
                             <div class="col-sm-6">
                                 <div class="input-group" data-tooltip="true" data-placement="top" title="$T('logging')">
                                     <span class="input-group-addon"><span class="glyphicon glyphicon-comment"></span></span>
-                                    <select class="form-control" data-bind="value: statusInfo.loglevel">
+                                    <select class="form-control" data-bind="value: loglevel">
                                         <option value="0">$T('log-errWarn')</option>
                                         <option value="1">$T('log-info')</option>
                                         <option value="2">$T('log-debug')</option>
