Update URL's to wiki pages

--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -178,7 +178,7 @@
     <!--#end if#-->
     <div class="section" id="nscript">
         <div class="col2">
-            <h3>$T('section-NScript')</h3>
+            <h3>$T('section-NScript') <a href="$helpuri$help_uri#nscript" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <table>
                 <tr>
                     <td><input type="checkbox" name="nscript_enable" id="nscript_enable" value="1" <!--#if int($nscript_enable) > 0 then 'checked="checked"' else ""#--> /></td>
