--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -230,7 +230,7 @@
         <input type="hidden" name="output" value="json" />
         <div class="section">
             <div class="col2">
-                <h3>$T('backup') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
+                <h3>$T('backup') <a href="$helpuri$help_uri#toc3" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
                 <p><b>$T('restartRequired')</b></p>
             </div><!-- /col2 -->
             <div class="col1">
